--- a/static/index.html
+++ b/static/index.html
@@ -111,6 +111,14 @@
     box-shadow:0 30px 80px rgba(0,0,0,.5);
   }
 
+  /* Mobile-only light border + hide fullscreen */
+  @media (max-width: 980px){
+    .video-wrapper video {
+      border:1px solid rgba(245,247,250,0.22); /* light border on mobile */
+    }
+    .fullscreen-btn { display:none; }          /* hide expand on mobile */
+  }
+
   /* Overlay controls */
   .fullscreen-btn{
     position:absolute; bottom:12px; right:12px;
@@ -122,7 +130,7 @@
   }
   .fullscreen-btn:hover{ background:rgba(17,23,34,.9); transform:translateY(-1px); }
 
-  /* Learn more pill with thin bright pulse */
+  /* Learn more pill — collapsed to icon by default */
   .learnmore-btn {
     position: absolute;
     top: 12px;
@@ -131,8 +139,9 @@
 
     display: inline-flex;
     align-items: center;
-    gap: 6px;
-    padding: 8px 14px;
+    overflow: hidden;              /* hide label while collapsed */
+    gap: 0;                        /* grows when expanded */
+    padding: 8px 10px;             /* tight around icon when collapsed */
     border-radius: 999px;
     font-size: 14px;
     font-weight: 600;
@@ -146,7 +155,31 @@
     /* resting subtle glow */
     box-shadow: 0 0 4px rgba(84,160,255,0.25);
 
-    transition: transform .2s ease, box-shadow .3s ease, background .2s ease;
+    transition: padding .25s ease, gap .25s ease,
+                transform .2s ease, box-shadow .3s ease, background .2s ease;
+  }
+
+  .learnmore-btn .label {
+    white-space: nowrap;
+    max-width: 0;
+    opacity: 0;
+    margin-left: 0;
+    transition: max-width .35s ease, opacity .25s ease, margin-left .25s ease;
+  }
+
+  /* Expanded state (used for hover/focus + the one-time intro) */
+  .learnmore-btn.expanded,
+  .learnmore-btn:hover,
+  .learnmore-btn:focus-visible {
+    padding: 8px 14px;
+    gap: 6px;
+  }
+  .learnmore-btn.expanded .label,
+  .learnmore-btn:hover .label,
+  .learnmore-btn:focus-visible .label {
+    max-width: 120px;
+    opacity: 1;
+    margin-left: 2px;
   }
 
   .learnmore-btn:hover {
@@ -154,26 +187,19 @@
     transform: translateY(-1px);
     box-shadow: 0 0 6px rgba(84,160,255,0.6);
   }
-
   .learnmore-btn:focus-visible {
     outline: none;
     box-shadow: 0 0 0 3px rgba(84,160,255,0.7);
   }
 
-  /* Pulse once on load */
+  /* Thin bright pulse (one-time) */
   .learnmore-btn.pulse-once {
     animation: lmPulse 1.6s ease-out 1;
   }
   @keyframes lmPulse {
-    0% { box-shadow: none; }
-    40% {
-      box-shadow:
-        0 0 6px rgba(84,160,255,0.95),
-        0 0 12px rgba(84,160,255,0.7);
-    }
-    100% {
-      box-shadow: 0 0 4px rgba(84,160,255,0.25);
-    }
+    0%   { box-shadow: none; }
+    40%  { box-shadow: 0 0 6px rgba(84,160,255,0.95), 0 0 12px rgba(84,160,255,0.7); }
+    100% { box-shadow: 0 0 4px rgba(84,160,255,0.25); }
   }
   @media (prefers-reduced-motion: reduce) {
     .learnmore-btn.pulse-once { animation: none; }
@@ -215,26 +241,29 @@
         <video
           id="lyloVideo"
           autoplay
+          loop
           muted
           playsinline
           preload="metadata"
           poster="/static/poc.jpg"
           aria-label="Drag & drop payslips to Lylo; Lylo drafts an accurate Schedule of Loss.">
-          <!-- Put MP4 first for iOS Safari -->
+          <!-- MP4 first for iOS Safari -->
           <source src="/static/poc.mp4" type="video/mp4; codecs='avc1.42E01E, mp4a.40.2'">
           <source src="/static/poc.webm" type="video/webm">
           <img src="/static/poc.jpg" alt="Drag & drop payslips to Lylo; Lylo drafts an accurate Schedule of Loss.">
         </video>
 
-        <!-- overlay buttons -->
-        <a href="/demo" class="learnmore-btn pulse-once" aria-label="Learn more about this demo">
+        <!-- overlay controls -->
+        <a href="/demo" class="learnmore-btn" id="learnMoreBtn" aria-label="Learn more about this demo">
+          <!-- info icon -->
           <svg width="16" height="16" viewBox="0 0 24 24" fill="none" aria-hidden="true">
             <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.6" opacity="0.9"/>
             <path d="M12 17v-6" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
             <circle cx="12" cy="7.5" r="1.2" fill="currentColor"/>
           </svg>
-          Learn more
+          <span class="label">Learn more</span>
         </a>
+
         <button class="fullscreen-btn" id="fullscreenToggle" aria-label="Enter fullscreen">⤢</button>
       </div>
     </aside>
@@ -246,14 +275,16 @@
 </footer>
 
 <script>
-  // fullscreen button
+  // fullscreen button (hidden on mobile via CSS)
   const video = document.getElementById("lyloVideo");
-  const btn = document.getElementById("fullscreenToggle");
-  btn.addEventListener("click", () => {
-    if (video.requestFullscreen) video.requestFullscreen();
-    else if (video.webkitRequestFullscreen) video.webkitRequestFullscreen();
-    else if (video.msRequestFullscreen) video.msRequestFullscreen();
-  });
+  const fsBtn = document.getElementById("fullscreenToggle");
+  if (fsBtn) {
+    fsBtn.addEventListener("click", () => {
+      if (video.requestFullscreen) video.requestFullscreen();
+      else if (video.webkitRequestFullscreen) video.webkitRequestFullscreen();
+      else if (video.msRequestFullscreen) video.msRequestFullscreen();
+    });
+  }
 
   // autoplay fallback for iOS Safari
   (function () {
@@ -276,8 +307,25 @@
     window.addEventListener('touchstart', onInteract, { passive: true });
     window.addEventListener('click', onInteract);
   })();
+
+  // One-time expand + pulse, then collapse back to icon
+  (function () {
+    const btn = document.getElementById('learnMoreBtn');
+    if (!btn) return;
+
+    // Start collapsed (icon only) — expand briefly after load
+    const expandDelay = 3500;   // ms after load
+    const showFor = 2500;      // ms to keep expanded before collapsing
+
+    setTimeout(() => {
+      btn.classList.add('expanded', 'pulse-once');
+      // remove pulse class after animation ends, keep expanded for a bit, then collapse
+      setTimeout(() => {
+        btn.classList.remove('pulse-once', 'expanded');
+      }, showFor);
+    }, expandDelay);
+  })();
 </script>
 
 </body>
 </html>
-
