--- a/static/index.html
+++ b/static/index.html
@@ -111,12 +111,11 @@
     box-shadow:0 30px 80px rgba(0,0,0,.5);
   }
 
-  /* Mobile-only light border + hide fullscreen */
+  /* Mobile-only light border */
   @media (max-width: 980px){
     .video-wrapper video {
       border:1px solid rgba(245,247,250,0.22); /* light border on mobile */
     }
-    .fullscreen-btn { display:none; }          /* hide expand on mobile */
   }
 
   /* Overlay controls */
@@ -139,9 +138,9 @@
 
     display: inline-flex;
     align-items: center;
-    overflow: hidden;              /* hide label while collapsed */
-    gap: 0;                        /* grows when expanded */
-    padding: 8px 10px;             /* tight around icon when collapsed */
+    overflow: hidden;              
+    gap: 0;                        
+    padding: 8px 10px;             
     border-radius: 999px;
     font-size: 14px;
     font-weight: 600;
@@ -152,7 +151,6 @@
     backdrop-filter: blur(4px) saturate(115%);
     border: 1px solid rgba(84,160,255,0.4);
 
-    /* resting subtle glow */
     box-shadow: 0 0 4px rgba(84,160,255,0.25);
 
     transition: padding .25s ease, gap .25s ease,
@@ -167,7 +165,6 @@
     transition: max-width .35s ease, opacity .25s ease, margin-left .25s ease;
   }
 
-  /* Expanded state (used for hover/focus + the one-time intro) */
   .learnmore-btn.expanded,
   .learnmore-btn:hover,
   .learnmore-btn:focus-visible {
@@ -192,7 +189,6 @@
     box-shadow: 0 0 0 3px rgba(84,160,255,0.7);
   }
 
-  /* Thin bright pulse (one-time) */
   .learnmore-btn.pulse-once {
     animation: lmPulse 1.6s ease-out 1;
   }
@@ -211,9 +207,8 @@
     color:var(--muted); font-size:14px;
   }
 
-  /* Accessibility */
   *,*:before,*:after{transition:transform .25s cubic-bezier(.2,.8,.2,1), opacity .25s ease, background-color .25s ease, box-shadow .25s ease;}
-  @media (prefers-reduced-motion: reduce){*,*:before,*:after{transition:none !important; animation:none !重要;}
+  @media (prefers-reduced-motion: reduce){*,*:before,*:after{transition:none !important; animation:none !important;}}
   ::selection{ background:rgba(84,160,255,.28); color:#fff; }
   :root{ color-scheme:dark; }
 </style>
@@ -248,15 +243,12 @@
           preload="metadata"
           poster="/static/poc.jpg"
           aria-label="Drag & drop payslips to Lylo; Lylo drafts an accurate Schedule of Loss.">
-          <!-- MP4 first for iOS Safari -->
           <source src="/static/poc.mp4" type="video/mp4; codecs='avc1.42E01E, mp4a.40.2'">
           <source src="/static/poc.webm" type="video/webm">
           <img src="/static/poc.jpg" alt="Drag & drop payslips to Lylo; Lylo drafts an accurate Schedule of Loss.">
         </video>
 
-        <!-- overlay controls -->
         <a href="/demo" class="learnmore-btn" id="learnMoreBtn" aria-label="Learn more about this demo">
-          <!-- info icon -->
           <svg width="16" height="16" viewBox="0 0 24 24" fill="none" aria-hidden="true">
             <circle cx="12" cy="12" r="10" stroke="currentColor" stroke-width="1.6" opacity="0.9"/>
             <path d="M12 17v-6" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
@@ -276,9 +268,9 @@
 </footer>
 
 <script>
-  // fullscreen button (hidden on mobile via CSS)
   const video = document.getElementById("lyloVideo");
   const fsBtn = document.getElementById("fullscreenToggle");
+
   if (fsBtn) {
     fsBtn.addEventListener("click", () => {
       if (video.requestFullscreen) video.requestFullscreen();
@@ -287,49 +279,38 @@
     });
   }
 
-  // autoplay + controls fallback (mobile-friendly, no controls unless necessary)
+  // autoplay + controls fallback
   (function () {
     if (!video) return;
-
     const tryPlay = () => video.play();
 
-    // Try autoplay after metadata is ready
     if (video.readyState >= 2) {
-      tryPlay().catch(() => {/* ignore */});
+      tryPlay().catch(() => {});
     } else {
-      video.addEventListener('loadeddata', () => {
-        tryPlay().catch(() => {/* ignore */});
-      }, { once: true });
+      video.addEventListener('loadeddata', () => { tryPlay().catch(() => {}); }, { once: true });
     }
 
-    // On first direct tap on the VIDEO ONLY, try play again without controls.
-    // If still blocked, add controls just once; remove them on successful play.
     const onVideoTap = () => {
       tryPlay().catch(() => {
-        video.setAttribute('controls', ''); // last resort
-        video.play().catch(() => {/* still blocked */});
+        video.setAttribute('controls', '');
+        video.play().catch(() => {});
       });
     };
 
     video.addEventListener('touchstart', onVideoTap, { passive: true, once: true });
     video.addEventListener('click', onVideoTap, { once: true });
 
-    // If controls were added but playback starts, remove them to avoid overlays on taps
     video.addEventListener('play', () => {
-      if (video.hasAttribute('controls')) {
-        video.removeAttribute('controls');
-      }
+      if (video.hasAttribute('controls')) video.removeAttribute('controls');
     });
   })();
 
-  // One-time expand + pulse, then collapse back to icon (slower start)
+  // Learn more pill animation
   (function () {
     const btn = document.getElementById('learnMoreBtn');
     if (!btn) return;
-
-    const expandDelay = 2000;   // wait longer before expanding
-    const showFor = 1800;       // keep expanded for this long
-
+    const expandDelay = 6000;
+    const showFor = 4000;
     setTimeout(() => {
       btn.classList.add('expanded', 'pulse-once');
       setTimeout(() => {
