--- a/static/index.html
+++ b/static/index.html
@@ -19,19 +19,16 @@
 
   *{box-sizing:border-box}
 
-  /* Sticky footer layout */
   html,body{height:100%}
   body{
     margin:0; font-family:var(--font); color:var(--text);
     -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
     background:none; position:relative;
-
     min-height:100svh;
     display:flex; flex-direction:column;
   }
   main{ flex:1; display:flex; }
 
-  /* Background effects */
   body::before{
     content:""; position:fixed; inset:0; pointer-events:none; z-index:-1; background:
       radial-gradient(1200px 700px at 70% -10%, rgba(84,160,255,.08), transparent 70%),
@@ -43,7 +40,6 @@
     background-image:var(--noise); opacity:.05; mix-blend-mode:soft-light;
   }
 
-  /* Main content grid */
   .wrap{
     width:100%; max-width:var(--container); margin:auto;
     padding:clamp(48px, 6vh, 100px) var(--space) clamp(28px, 4vh, 60px);
@@ -70,7 +66,6 @@
   .bullets{list-style:none;margin:0 0 calc(var(--space)*1.4);padding:0;display:grid;gap:14px;justify-content:center;}
   .bullet{font-size:17px;line-height:1.45;max-width:440px;margin:0 auto;}
 
-  /* CTA */
   .cta{
     display:inline-block; width:100%; max-width:300px; margin:auto;
     padding:16px 18px; text-align:center; font-weight:600; font-size:17px; color:var(--text);
@@ -99,7 +94,6 @@
 
   .note{color:var(--muted);font-size:13px;margin-top:10px}
 
-  /* VISUAL (no panel) */
   .visual{display:flex; align-items:center; justify-content:center;}
   .video-wrapper{position:relative;width:100%;}
   .video-wrapper video,
@@ -111,14 +105,12 @@
     box-shadow:0 30px 80px rgba(0,0,0,.5);
   }
 
-  /* Mobile-only light border */
   @media (max-width: 980px){
     .video-wrapper video {
       border:1px solid rgba(245,247,250,0.22);
     }
   }
 
-  /* Overlay controls */
   .fullscreen-btn{
     position:absolute; bottom:12px; right:12px;
     background:rgba(17,23,34,.7); color:var(--text);
@@ -129,13 +121,11 @@
   }
   .fullscreen-btn:hover{ background:rgba(17,23,34,.9); transform:translateY(-1px); }
 
-  /* Learn more pill — collapsed to icon by default */
   .learnmore-btn {
     position: absolute;
     top: 12px;
     right: 12px;
     z-index: 2;
-
     display: inline-flex;
     align-items: center;
     overflow: hidden;
@@ -145,18 +135,14 @@
     font-size: 14px;
     font-weight: 600;
     text-decoration: none;
-
     color: var(--text);
     background: rgba(17,23,34,0.6);
     backdrop-filter: blur(4px) saturate(115%);
     border: 1px solid rgba(84,160,255,0.4);
-
     box-shadow: 0 0 4px rgba(84,160,255,0.25);
-
     transition: padding .25s ease, gap .25s ease,
                 transform .2s ease, box-shadow .3s ease, background .2s ease;
   }
-
   .learnmore-btn .label {
     white-space: nowrap;
     max-width: 0;
@@ -164,7 +150,6 @@
     margin-left: 0;
     transition: max-width .35s ease, opacity .25s ease, margin-left .25s ease;
   }
-
   .learnmore-btn.expanded,
   .learnmore-btn:hover,
   .learnmore-btn:focus-visible {
@@ -178,7 +163,6 @@
     opacity: 1;
     margin-left: 2px;
   }
-
   .learnmore-btn:hover {
     background: rgba(17,23,34,0.8);
     transform: translateY(-1px);
@@ -188,10 +172,7 @@
     outline: none;
     box-shadow: 0 0 0 3px rgba(84,160,255,0.7);
   }
-
-  .learnmore-btn.pulse-once {
-    animation: lmPulse 1.6s ease-out 1;
-  }
+  .learnmore-btn.pulse-once { animation: lmPulse 1.6s ease-out 1; }
   @keyframes lmPulse {
     0%   { box-shadow: none; }
     40%  { box-shadow: 0 0 6px rgba(84,160,255,0.95), 0 0 12px rgba(84,160,255,0.7); }
@@ -206,11 +187,6 @@
     border-top:1px solid rgba(255,255,255,.06);
     color:var(--muted); font-size:14px;
   }
-
-  *,*:before,*:after{transition:transform .25s cubic-bezier(.2,.8,.2,1), opacity .25s ease, background-color .25s ease, box-shadow .25s ease;}
-  @media (prefers-reduced-motion: reduce){*,*:before,*:after{transition:none !important; animation:none !important;}}
-  ::selection{ background:rgba(84,160,255,.28); color:#fff; }
-  :root{ color-scheme:dark; }
 </style>
 </head>
 <body>
@@ -220,13 +196,11 @@
     <section class="stack">
       <h1 class="logo">Lylo.</h1>
       <p class="tagline">Offline, secure AI for solicitors.</p>
-
       <ul class="bullets">
         <li class="bullet">
           Built for Employment Law. Drafts and compiles documents such as Statement of Facts, ET1’s and Schedule of Loss’ with total accuracy and zero cloud risk.
         </li>
       </ul>
-
       <a href="/research" class="cta" id="getStarted">Take part</a>
       <div class="note">In development stages. Register interest.</div>
     </section>
@@ -242,10 +216,10 @@
           webkit-playsinline
           preload="metadata"
           poster="/static/poc.jpg"
-          aria-label="Drag & drop payslips to Lylo; Lylo drafts an accurate Schedule of Loss.">
+          aria-label="Demo video showing Lylo drafting a Schedule of Loss.">
           <source src="/static/poc.mp4" type="video/mp4; codecs='avc1.42E01E, mp4a.40.2'">
           <source src="/static/poc.webm" type="video/webm">
-          <img src="/static/poc.jpg" alt="Drag & drop payslips to Lylo; Lylo drafts an accurate Schedule of Loss.">
+          <img src="/static/poc.jpg" alt="Lylo demo fallback image">
         </video>
 
         <a href="/demo" class="learnmore-btn" id="learnMoreBtn" aria-label="Learn more about this demo">
@@ -271,82 +245,61 @@
   const video = document.getElementById("lyloVideo");
   const fsBtn = document.getElementById("fullscreenToggle");
 
-  // Robust fullscreen handler for iOS/Android/Desktop
   function goFullscreen() {
     if (!video) return;
-
-    // If already fullscreen, exit.
     if (document.fullscreenElement && document.exitFullscreen) {
       document.exitFullscreen().catch(() => {});
       return;
     }
-
-    try {
-      // Standard API
-      if (video.requestFullscreen) return video.requestFullscreen();
-    } catch(e) {}
-
-    try {
-      // Safari (iPadOS/desktop)
-      if (video.webkitRequestFullscreen) return video.webkitRequestFullscreen();
-    } catch(e) {}
-
-    try {
-      // iOS Safari (older/newer variants)
-      if (video.webkitEnterFullscreen) return video.webkitEnterFullscreen();
-    } catch(e) {}
-
-    try {
-      if (video.webkitEnterFullScreen) return video.webkitEnterFullScreen();
-    } catch(e) {}
-
-    // Last resort: briefly show controls to let user tap the native fullscreen icon
-    // (We remove them again after playback starts.)
+    try { if (video.requestFullscreen) return video.requestFullscreen(); } catch(e) {}
+    try { if (video.webkitRequestFullscreen) return video.webkitRequestFullscreen(); } catch(e) {}
+    try { if (video.webkitEnterFullscreen) return video.webkitEnterFullscreen(); } catch(e) {}
+    try { if (video.webkitEnterFullScreen) return video.webkitEnterFullScreen(); } catch(e) {}
     video.setAttribute('controls', '');
   }
 
   if (fsBtn) {
-    // Use both click and touchend so it's always treated as a user gesture
     fsBtn.addEventListener("click", goFullscreen);
-    fsBtn.addEventListener("touchend", function(e){
-      e.preventDefault();
-      goFullscreen();
-    }, { passive: false });
+    fsBtn.addEventListener("touchend", e => { e.preventDefault(); goFullscreen(); }, { passive: false });
   }
 
-  // Autoplay + controls fallback (no random controls on page taps)
+  // ✅ Resume video if it freezes after leaving fullscreen
+  function handleFsExit() {
+    if (video && video.paused) {
+      video.play().catch(() => {});
+    }
+  }
+  document.addEventListener("fullscreenchange", handleFsExit);
+  document.addEventListener("webkitendfullscreen", handleFsExit);
+
+  // Autoplay fallback
   (function () {
     if (!video) return;
     const tryPlay = () => video.play();
-
     if (video.readyState >= 2) {
       tryPlay().catch(() => {});
     } else {
       video.addEventListener('loadeddata', () => { tryPlay().catch(() => {}); }, { once: true });
     }
-
     const onVideoTap = () => {
       tryPlay().catch(() => {
         video.setAttribute('controls', '');
         video.play().catch(() => {});
       });
     };
-
     video.addEventListener('touchstart', onVideoTap, { passive: true, once: true });
     video.addEventListener('click', onVideoTap, { once: true });
-
     video.addEventListener('play', () => {
       if (video.hasAttribute('controls')) video.removeAttribute('controls');
     });
   })();
 
-  // Learn more pill animation (delay then expand, pulse, collapse)
+  // Learn more pill animation
   (function () {
     const btn = document.getElementById('learnMoreBtn');
     if (!btn) return;
-    const expandDelay = 7000;   // delay before expandings
-    const showFor = 4000;       // how long to stay expanded
-
+    const expandDelay = 7000;
+    const showFor = 4000;
     setTimeout(() => {
       btn.classList.add('expanded', 'pulse-once');
       setTimeout(() => {
